--- a/pushServer/pom.xml
+++ b/pushServer/pom.xml
@@ -43,6 +43,11 @@
             <version>4.3.9.RELEASE</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+		    <groupId>javax.annotation</groupId>
+		    <artifactId>javax.annotation-api</artifactId>
+		    <version>1.3.2</version>
+		</dependency>
     </dependencies>
 
     <build>
@@ -87,7 +92,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.10.4</version>
+                <version>3.0.0</version>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
@@ -96,8 +101,10 @@
                         </goals>
                         <!--
                         <configuration>
-                            <additionalparam>-Xdoclint:none</additionalparam>
-                        </configuration>
+			                <additionalOptions>
+			                    <additionalOption>-Xdoclint:none</additionalOption>
+			                </additionalOptions>
+			            </configuration>
                         -->
                     </execution>
                 </executions>
